--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
                     <a class="nav__link" href="a">Work</a>
                     <a class="nav__link" href="a">Blok</a>
                     <a class="nav__link" href="a">Contact</a>
+                    <a class="nav__link" href="a">shopping cart</a>
+                    <a class="nav__link" href="a">Searcht</a>
+
+                    </a>
                 </nav>
             </div>
         </div>
@@ -626,7 +630,6 @@
     </div>
     <!--./-->
 
-
     <!--8 blok создаем новый классификатор section-- Clients-->
     <section class="section--сlients">
         <div class="container">
@@ -685,12 +688,9 @@
             </div>
         </div>
         </div>
-        <!--сlients-->
-        <!--./container-->
     </section>
 
     <!--9blok Latest BLOG-->
-
     <section class="section">
         <div class="container">
 
@@ -782,14 +782,11 @@
                     </div>
                 </div>
             </div>
-            <!--/.blog-->
-
         </div>
-        <!--container-->
+        <!--/.container-->
     </section>
-    <!--/.-->
-
-    <!--Open map-->
+    <!--9blok/.blog-->
+    <!--Open map 9blok-->
     <section class="section section--map">
         <div class="container">
             <div class="map">
@@ -800,12 +797,10 @@
                 </h2>
             </div>
         </div>
-
     </section>
-    <!--/.Open map-->
+    <!--/.Open map 9blok-->
 
-
-    <!--blok footor -->
+    <!--blok footor 10blok-->
     <footor class="footor">
         <div class="container">
 
@@ -814,10 +809,8 @@
                     <!--добавим модификатор footer__col--first-->
                     <div class=" footor__logo">MoGo</div>
                     <div class="footor__text">Lorem ipsum dolor sit amet, consectetur adipiscing
-                        elit, sed do eiusmod tempor
-                        incididunt ut labore et dolore magna aliqua.
-                        Ut enim ad minim veniam, qui
-                        ex ea commodo consequat.</div>
+                        elit, sed do eiusmod tempo incididunt ut labore et dolore magna aliqua.
+                        Ut enim ad minim veniam, qui ex ea commodo consequat.</div>
 
                     <div class="footor__social">
                         <div class="footor__social-header">
@@ -825,7 +818,7 @@
                         </div>
                         <div class="footor__social-content">
                             follow Us
-                            <a href="#">
+                            <a href="#" target="blank">
                                 <i class="image">
                                     <img src="images/footor/footor.png" alt="">
                                 </i>
@@ -833,29 +826,86 @@
                         </div>
                     </div>
 
-
                     <!--делаем форму с классом Subscribe-->
                     <form class="Subscribe" action="/" method="post">
                         <input class="Subscribe__input" type="email" name="name" placeholder="Your Email...">
                         <button class="Subscribe__btn" type="submit">Subscribe</button>
-
                     </form>
                 </div>
-                <!--footor__col-->
-
-                <div class="footor__col footer__col--first">1</div>
-
                 <div class="footor__col footer__col--second">
                     <div class="footer__title">blogs</div>
+
+                    <div class="blogs">
+                        <div class="blogs__item">
+                            <img class="blogs__img" src="images/footor/12.jpg" alt="">
+                            <div class="blogs__content">
+                                <a class="blogs__title" href="#">Lorem ipsum dolor sit amet,
+                                    consectetur...</a>
+                                <div class="blogs__date">Jan 9, 2016</div>
+                            </div>
+                        </div>
+
+                        <div class="blogs__item">
+                            <img class="blogs__img" src="images/footor/2120.jpg" alt="">
+                            <div class="blogs__content">
+                                <a class="blogs__title" href="#">Consectetur adipiscing elit,
+                                    sed do...</a>
+                                <div class="blogs__date">Jan 9, 2016</div>
+                            </div>
+                        </div>
+
+                        <div class="blogs__item">
+                            <img class="blogs__img" src="images/footor/3120.jpg" alt="">
+                            <div class="blogs__content">
+                                <a class="blogs__title" href="#">sed do eiusmod tempor
+                                    incididunt ut labore.</a>
+                                <div class="blogs__date">Jan 9, 2016</div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--/.blogs-->
                 </div>
 
                 <div class="footor__col footer__col--third">
-                    <div class="Footer__title">instagram</div>
+                    <div class="footer__title">instagram</div>
+
+                    <div class="instagram">
+                        <a class="instagram__item" href="#" target="_blank">
+                            <img src="images/footor/inst/31.jpg" alt="">
+                        </a>
+                        <a class="instagram__item" href="#" target="_blank">
+                            <img src="images/footor/inst/32.jpg" alt="">
+                        </a>
+                        <a class="instagram__item" href="#" target="_blank">
+                            <img src="images/footor/inst/33.jpg" alt="">
+                        </a>
+                        <a class="instagram__item" href="#" target="_blank">
+                            <img src="images/footor/inst/34.jpg" alt="">
+                        </a>
+                        <a class="instagram__item" href="#" target="_blank">
+                            <img src="images/footor/inst/35.jpg" alt="">
+                        </a>
+                        <a class="instagram__item" href="#" target="_blank">
+                            <img src="images/footor/inst/36.jpg" alt="">
+                        </a>
+                        <a class="instagram__item" href="#" target="_blank">
+                            <img src="images/footor/inst/37.jpg" alt="">
+                        </a>
+                        <a class="instagram__item" href="#" target="_blank">
+                            <img src="images/footor/inst/38.jpg" alt="">
+                        </a>
+                        <a class="instagram__item" href="#" target="_blank">
+                            <img src="images/footor/inst/39.jpg" alt="">
+                        </a>
+                    </div>
                 </div>
 
             </div>
             <!--/.footor__inner-->
 
+            <div class="copyright">
+                © 2016 MoGo free PSD template by <span>Laaqiq</span>
+            </div>
 
         </div>
         <!--/.container-->
